attempt to fix missing colors on buttons in IE

--- a/clients/html/src/app/info/info.component.scss
+++ b/clients/html/src/app/info/info.component.scss
@@ -64,11 +64,9 @@ sup {
   justify-content: space-between;
   align-items: center;
 
-  .btn {
+  .ic-button {
     width: 150px;
     font-size: 18px;
-    color: var(--inverted-text-color);
-    background-color: var(--primary-color);
   }
 }
 
